<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cuisineBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/cuisine"
        android:textSize="@dimen/text_size_small1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cuisineTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small1"
        app:layout_constraintBottom_toBottomOf="@id/cuisineBt"
        app:layout_constraintStart_toEndOf="@id/cuisineBt"
        app:layout_constraintTop_toTopOf="@id/cuisineBt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dietBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/dietBt"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_size_small1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cuisineBt" />

    <TextView
        android:id="@+id/dietTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small1"
        app:layout_constraintBottom_toBottomOf="@id/dietBt"
        app:layout_constraintStart_toEndOf="@id/dietBt"
        app:layout_constraintTop_toTopOf="@id/dietBt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/intolerancesBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/intolerances"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_size_small1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dietBt" />

    <TextView
        android:id="@+id/intolerancesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small1"
        app:layout_constraintBottom_toBottomOf="@id/intolerancesBt"
        app:layout_constraintStart_toEndOf="@id/intolerancesBt"
        app:layout_constraintTop_toTopOf="@id/intolerancesBt" />

</androidx.constraintlayout.widget.ConstraintLayout>